o REPORT: Now report(fit, ..., rspTags) for AbstractCBS looks for the 
  RSP template named <className>(,<rspTags>),report.tex.rsp, where
  className is class(fit)[1] and  argument 'rspTags' is an optional
  comma-separated character string/vector.  This makes it possible
  to have different types of report for the same class of objects.


Version: 0.29.1 [2012-09-15]
o Added argument 'dropMissingCT' to segmentByPairedPSCBS().


Version: 0.29.0 [2012-09-14]
o Added trial version of pruneByDP() for AbstractCBS.


Version: 0.28.6 [2012-09-13]
o Now tileChromosomes() also adjusts 'knownSegments'.
o Added argument 'dropGaps' to gapsToSegments().
o Updated all.equal() for AbstractCBS to compare locus-level data,
  segments, and other fields.


Version: 0.28.5 [2012-09-13]
o SPEEDUP: Now segmentByCBS(..., undo=+Inf) returns much faster, which
  is possible because there is no need to identify new change points.


Version: 0.28.4 [2012-09-13]
o CONSISTENCY FIX: Changed the behavior of extreme values of argument
  'undo' to segmentByCBS() such that 'undo=0' (was 'undo=+Inf') now
  means that it will not ask DNAcopy::segment() to undo the segmentation,
  and such that 'undo=+Inf' means that no changepoints will be identified.
  The latter case allows you to effectively skip the segmentation but
  still calculate all the CBS statistics across a set of known segments
  via segmentByCBS(..., undo=+Inf, knownSegments=knownSegments).
  Arguments 'undoTCN' and 'undoDH' to segmentByPairedPSCBS() are
  adjusted analogously.  Corresponding system tests were added.


Version: 0.28.3 [2012-08-30]
o Updated code and Rd cross reference to use the 'matrixStats'
  package for weightedMedian(), which used to be in 'aroma.light'.


Version: 0.28.2 [2012-08-20]
o BUG FIX: segmentByNonPairedPSCBS() forgot to specify namespace
  aroma.light when trying to call findPeaksAndValleys().


Version: 0.28.1 [2012-08-15]
o Minor grammatical corrections of the Paired PSCBS vignette.

